notebooks: Add support for saving segmentation history to video

--- a/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
@@ -19,6 +19,8 @@
     "from tensorboard.backend.event_processing import event_multiplexer\n",
     "from tensorboard.backend.event_processing import event_accumulator as event_accumulator\n",
     "\n",
+    "from IPython.display import HTML\n",
+    "\n",
     "from PIL import Image\n",
     "\n",
     "from collections import defaultdict\n",
@@ -292,6 +294,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def visualize_change_in_segmentations_video(multiplexer, image_id, epochs, set_name=None):\n",
+    "    \"\"\"Visualize the change in segmentations over the specified epochs\"\"\"\n",
+    "    from matplotlib.animation import FuncAnimation\n",
+    "    set_name = set_name or \"validation\"\n",
+    "    \n",
+    "    segmentation_mious = maybe_get_segmentation_miou_labels(multiplexer,\n",
+    "                                                            \"{}/reference/{}/mIoU\".format(set_name, image_id))\n",
+    "    \n",
+    "    multiplexer_image_events = sorted_by_step(multiplexer.Images(RUN_TAG, \"{}/reference/{}\".format(set_name, image_id)))\n",
+    "    \n",
+    "    fig = sns.mpl.pyplot.figure()\n",
+    "    ax = sns.mpl.pyplot.axes()\n",
+    "    ax.get_xaxis().set_visible(False)\n",
+    "    ax.get_yaxis().set_ticks([])\n",
+    "\n",
+    "    ax.set_xlabel('Epoch {} {}'.format(1, segmentation_mious[0]))\n",
+    "    label = ax.xaxis.get_label()\n",
+    "    img = ax.imshow(Image.open(io.BytesIO(multiplexer_image_events[0].encoded_image_string)))\n",
+    "    \n",
+    "    def init():\n",
+    "        return label, img\n",
+    "    \n",
+    "    def animate(epoch):\n",
+    "        label.set_text('Epoch {} {}'.format(1, segmentation_mious[epoch - 1]))\n",
+    "        img.set_array(np.array(Image.open(io.BytesIO(multiplexer_image_events[epoch - 1].encoded_image_string))))\n",
+    "        return label, img\n",
+    "    \n",
+    "    anim = FuncAnimation(fig, animate, init_func=init,\n",
+    "                         frames=range(epochs), interval=32, blit=True)\n",
+    "    sns.mpl.pyplot.close(anim._fig)\n",
+    "    return anim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def int_all(array):\n",
     "    return [int(np.round(a)) for a in array]\n",
     "\n",
@@ -352,8 +393,44 @@
     "validation_segmentation_2 = visualize_change_in_segmentations(multiplexer,\n",
     "                                                              2,\n",
     "                                                              int_all(np.geomspace(1,\n",
-    "                                                                                   30,\n",
+    "                                                                                   N_EPOCHS,\n",
     "                                                                                   6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_segmentation_video_0 = visualize_change_in_segmentations_video(multiplexer,\n",
+    "                                                                          0,\n",
+    "                                                                          N_EPOCHS)\n",
+    "HTML(validation_segmentation_video_0.to_html5_video())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_segmentation_video_1 = visualize_change_in_segmentations_video(multiplexer,\n",
+    "                                                                          1,\n",
+    "                                                                          N_EPOCHS)\n",
+    "HTML(validation_segmentation_video_1.to_html5_video())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_segmentation_video_2 = visualize_change_in_segmentations_video(multiplexer,\n",
+    "                                                                          2,\n",
+    "                                                                          N_EPOCHS)\n",
+    "HTML(validation_segmentation_video_2.to_html5_video())"
    ]
   },
   {
@@ -402,9 +479,48 @@
     "train_segmentation_2 = visualize_change_in_segmentations(multiplexer,\n",
     "                                                         2,\n",
     "                                                         int_all(np.geomspace(1,\n",
-    "                                                                              100,\n",
+    "                                                                              N_EPOCHS,\n",
     "                                                                              6)),\n",
     "                                                         set_name=\"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_segmentation_video_0 = visualize_change_in_segmentations_video(multiplexer,\n",
+    "                                                                     0,\n",
+    "                                                                     N_EPOCHS,\n",
+    "                                                                     set_name=\"train\")\n",
+    "HTML(train_segmentation_video_0.to_html5_video())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_segmentation_video_1 = visualize_change_in_segmentations_video(multiplexer,\n",
+    "                                                                     1,\n",
+    "                                                                     N_EPOCHS,\n",
+    "                                                                     set_name=\"train\")\n",
+    "HTML(train_segmentation_video_1.to_html5_video())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_segmentation_video_2 = visualize_change_in_segmentations_video(multiplexer,\n",
+    "                                                                     2,\n",
+    "                                                                     N_EPOCHS,\n",
+    "                                                                     set_name=\"train\")\n",
+    "HTML(train_segmentation_video_2.to_html5_video())"
    ]
   },
   {
@@ -595,6 +711,29 @@
     "    \"validation_seg1.png\": validation_segmentation_1,\n",
     "    \"validation_seg2.png\": validation_segmentation_2\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_animation_to_video(animation, path):\n",
+    "    Writer = sns.mpl.animation.writers['ffmpeg']\n",
+    "    writer = Writer(fps=30, bitrate=1800)\n",
+    "    animation.save(os.path.join(OUTPUT_DIR, path), writer=writer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_animation_to_video(train_segmentation_video_0, \"train_seg0_progress.mp4\")\n",
+    "save_animation_to_video(train_segmentation_video_1, \"train_seg1_progress.mp4\")\n",
+    "save_animation_to_video(train_segmentation_video_2, \"train_seg2_progress.mp4\")"
    ]
   },
   {
