notebooks: Adjust figure size of best_and_worst

--- a/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
@@ -531,7 +531,7 @@
    "source": [
     "def show_best_and_worst(multiplexer, epochs):\n",
     "    \"\"\"Visualize the best and worst segementations over the specified epochs\"\"\"\n",
-    "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs), ncols=8, figsize=(10,5))\n",
+    "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs), ncols=8, figsize=(15, 10))\n",
     "    sorted_images = {\n",
     "        k: sorted_by_step(v) for k, v in\n",
     "        {\n",
