notebooks: Use N_EPOCHS in best_and_worst

--- a/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
@@ -619,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_and_worst = show_best_and_worst(multiplexer, int_all(np.geomspace(1, 25, 3)))"
+    "best_and_worst = show_best_and_worst(multiplexer, int_all(np.geomspace(1, N_EPOCHS, 6)))"
    ]
   },
   {
