notebooks: Make reports dir configurable with environment variable

--- a/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
@@ -45,8 +45,9 @@
    "source": [
     "os.chdir('..')\n",
     "EXPERIMENT = os.environ.get(\"EXPERIMENT\", \"none\")\n",
+    "REPORTS = os.environ.get(\"REPORTS\", \"reports\")\n",
     "INPUT_DIR = os.path.expanduser(\"../experiments/{}\").format(EXPERIMENT)\n",
-    "OUTPUT_DIR = \"reports/{}\".format(EXPERIMENT)"
+    "OUTPUT_DIR = \"{}/{}\".format(REPORTS, EXPERIMENT)"
    ]
   },
   {
